@startuml

title __DATABASE's Class Diagram__\n

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.DBHelper {
          {static} ~ DATABASE_NAME : String
          {static} ~ DATABASE_VERSION : int
          {static} ~ mMyDatabaseListener : MyDatabaseListener
          + DBHelper()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.FocusDBHelper {
          + FocusDBHelper()
          + addData()
          + deleteAll()
          + describeContents()
          + getAllData()
          + isTableExists()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
          + removeOneData()
          + writeToParcel()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.HabitDBHelper {
          - TAG : String
          + HabitDBHelper()
          + deleteAllHabit()
          + deleteHabit()
          + getAllHabits()
          + getHabit()
          + getReminder()
          + insertHabit()
          + isReminderExisted()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
          + updateCount()
          + updateHabit()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.HabitGroupDBHelper {
          - TAG : String
          + HabitGroupDBHelper()
          + deleteAllHabitGroups()
          + getAllGroups()
          + insertGroup()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      interface com.mad.p03.np2020.routine.Interface.MyDatabaseListener {
          {abstract} + onDataAdd()
          {abstract} + onDataDelete()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.SectionDBHelper {
          ~ mContext : Context
          - TAG : String
          {static} - mMyDatabaseListener : MyDatabaseListener
          + SectionDBHelper()
          + delete()
          + getAllSections()
          + getSection()
          + hasID()
          + insertSection()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
          {static} + setMyDatabaseListener()
          + updatePosition()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.TaskDBHelper {
          - TAG : String
          {static} - mMyDatabaseListener : MyDatabaseListener
          + TaskDBHelper()
          + delete()
          + getAllTask()
          + getTask()
          + hasID()
          + insertTask()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
          {static} + setMyDatabaseListener()
          + update()
          + update()
          + update()
          + update()
          + update()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace database {
      class com.mad.p03.np2020.routine.database.UserDBHelper {
          - TAG : String
          + UserDBHelper()
          + getUser()
          + insertUser()
          + onCreate()
          + onDowngrade()
          + onUpgrade()
      }
    }
  }
  

  com.mad.p03.np2020.routine.database.DBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.mad.p03.np2020.routine.database.FocusDBHelper .up.|> android.os.Parcelable
  com.mad.p03.np2020.routine.database.FocusDBHelper -up-|> com.mad.p03.np2020.routine.database.DBHelper
  com.mad.p03.np2020.routine.database.HabitDBHelper -up-|> com.mad.p03.np2020.routine.database.DBHelper
  com.mad.p03.np2020.routine.database.HabitGroupDBHelper -up-|> com.mad.p03.np2020.routine.database.DBHelper
  com.mad.p03.np2020.routine.database.SectionDBHelper -up-|> com.mad.p03.np2020.routine.database.DBHelper
  com.mad.p03.np2020.routine.database.TaskDBHelper -up-|> com.mad.p03.np2020.routine.database.DBHelper
  com.mad.p03.np2020.routine.database.UserDBHelper -up-|> com.mad.p03.np2020.routine.database.DBHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
